--- a/css/brands.css
+++ b/css/brands.css
@@ -357,6 +357,17 @@ button:hover,
   filter: brightness(90%);
 }
 
+/* Gathering for Open Science Hardware */
+.button.button-gosh {
+  color: #000000;
+  background-color: #FFFFFF;
+  border: 1px solid #212121;
+}
+.button.button-gosh:hover,
+.button.button-gosh:focus {
+  filter: brightness(90%);
+}
+
 /* GitHub */
 .button.button-github {
   color: #ffffff;
@@ -630,6 +641,17 @@ button:hover,
   filter: brightness(90%);
 }
 
+/* ORCID ID */
+.button.button-orcid-id {
+  color: #000000;
+  background-color: #FFFFFF;
+  border: 1px solid #212121;
+}
+.button.button-orcid-id:hover,
+.button.button-orcid-id:focus {
+  filter: brightness(90%);
+}
+
 /* Patreon */
 .button.button-patreon {
   color: #ffffff;
@@ -712,6 +734,17 @@ button:hover,
 }
 .button.button-reddit:hover,
 .button.button-reddit:focus {
+  filter: brightness(90%);
+}
+
+/* ResearchGate */
+.button.button-researchgate {
+  color: #000000;
+  background-color: #FFFFFF;
+  border: 1px solid #212121;
+}
+.button.button-researchgate:hover,
+.button.button-researchgate:focus {
   filter: brightness(90%);
 }
 
