--- a/css/brands.css
+++ b/css/brands.css
@@ -748,6 +748,17 @@ button:hover,
   filter: brightness(90%);
 }
 
+/* reGOSH */
+.button.button-regosh {
+  color: #000000;
+  background-color: #FFFFFF;
+  border: 1px solid #212121;
+}
+.button.button-orcid-id:hover,
+.button.button-orcid-id:focus {
+  filter: brightness(90%);
+}
+
 /* ResearchGate */
 .button.button-researchgate {
   color: #000000;
